# Wound-Segmentation-UNet-And-EfficientNet-B4

./: .gitignore  README.md  benchmark.py  config.py  dataset.py  evaluate.py  inference.py  inference_onnx_tflite.py  inspect_models.py  logs.txt  loss.py  metrics.py  model.py  requirements.txt  test_onnx.py  train.py  wound_segmentation.ipynb
rust_inference/: Cargo.toml
rust_inference/.cargo/: config.toml
rust_inference/src/: benchmark.rs  main.rs  predictor.rs  server.rs
