[package]
name = "rust_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime bindings with ndarray integration enabled
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }

# Multi-dimensional arrays matching the version in ort
ndarray = "0.17.2"

# Image processing (pure Rust)
image = "0.25.0"

# Web framework & Async runtime
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.38.0", features = ["full"] }

# CLI Argument parser
clap = { version = "4.5.9", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# Parallel computing and hardware utility
rayon = "1.10.0"
num_cpus = "1.16.0"

# Base64 encoding for API image responses
base64 = "0.22.1"
